Set <form> to positiom: relative in CSS so it no longer overlaps the <features> content. Also fixed the broken corners of #pricing child divs (product cards). Shrunk <form> submit <input> button

--- a/style.css
+++ b/style.css
@@ -48,23 +48,25 @@ p{
 /* form*/
 
 #form{
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  position: absolute;
-  margin-top: 5%;
-  margin-left: 42.5%;
   align-items: center;
+  top: 50px;
 }
 
 #submit{
-  margin-top: 5%;
-  width: 60%;
+  width: 10%;
   background-color: #FF8C00;
   font-size: 1.2em;
   border: 0;
   border-radius: 2%;
+  cursor: pointer;
+  margin-top: 1%;
 }
+
+
 
 /* features */
 
@@ -72,7 +74,7 @@ p{
   width: 50%;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 15%;
+  padding-top: 5%;
   text-align: left;
 }
 
@@ -111,7 +113,7 @@ p{
   justify-content: space-between;
   width: 30%;
   border-style: solid;
-  border-radius: 3%;
+  border-radius: 1%;
   text-align: center;
   align-items: center;
   border-width: thin;
@@ -141,13 +143,14 @@ p{
   background-color: orange;
   border: 0;
   padding: 2% 5%;
+  cursor: pointer;
 }
 
 /* footer */
 
 footer{
-    padding-left: 20%;
-    padding-right: 20%;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 #footer {
@@ -188,13 +191,13 @@ footer span {
   #header{
     position: absolute;
     width: 95%;
-}
+  }
 
   #nav-bar{
     display: flex;
     justify-content: space-between;
     width: 70%;
-  }
+   }
 
   
   /* form*/ 
